--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,5 +1,7 @@
 /*Styles for the App component */
 .App {
+    margin: 0 auto;
+    max-width: 1024px;
     text-align: center;
 }
 
